# todolist

./: .dockerignore  Dockerfile  README.md  Taskfile.yaml  atlas.hcl  devbox-ci.json
.github/workflows/: ci.yaml
app/: .gitignore  main.py  pyproject.toml
app/instance/: todos.db
app/migrations/: 20251107114509.sql  20251107121652.sql  20251107122109.sql  atlas.sum
app/models/: models.py
app/static/css/: input.css  style.css
app/templates/: base.html  todo_list.html
app/tests/: conftest.py  integration.py  regression.py  units.py
kubernetes/: AtlasSchema.yaml  kind.yaml  nginx-values.yaml
kubernetes/todolist/: Deployment.yaml  Gateway.yaml  HTTPRoute.yaml  Ingress.yaml  Service.yaml
scripts/: run-integration-tests.sh  run-regression-tests.sh  run-smoke-test.sh  run-units-tests.sh
