[project]
name = "app"
version = "0.1.0"
description = "App todolist"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.3",
]

[tool.ruff]
# Configuration minimale pour Ruff
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Ignorer E402 (module level import not at top of file) dans les tests
per-file-ignores = { "tests/*.py" = ["E402"] }

